Kurmanji renamed to Northern Kurdish.
This aligns with the newly registered languages of Central Kurdish and Southern Kurdish. Also, we are getting a new Northern Kurdish treebank of a variety called Bezeyni, and Hiwa Asadpour does not want to identify it as Kurmanji.

--- a/codes_and_flags.yaml
+++ b/codes_and_flags.yaml
@@ -651,7 +651,7 @@ Koromfe:
   iso3: kfz
   family: Niger-Congo
   genus: Northern-Central Gur
-Kurmanji:
+Northern Kurdish:
   flag: IQ-KRD
   lcode: kmr
   iso3: kmr
