--- a/valdan/releases.json
+++ b/valdan/releases.json
@@ -34,6 +34,6 @@
 "2.13": [["UD_Old_Turkish-Tonqq", "UD_Old_Turkish-Clausal"]],
 "2.14": [["UD_Beja-NSC", "UD_Beja-Autogramm"]],
 "2.15": [["UD_Swiss_German-UZH", "UD_Alemannic-UZH"], ["UD_Czech-PDT", "UD_Czech-PDTC"]],
-"2.16": [["UD_Kurmanji-MG", "UD_Northern_Kurdish-Kurmanji"]]
+"2.16": [["UD_Kurmanji-MG", "UD_Northern_Kurdish-Kurmanji"], ["UD_Occitan-CorAG", "UD_Old_Occitan-CorAG"]]
 }
 }
