--- a/valdan/releases.json
+++ b/valdan/releases.json
@@ -36,6 +36,6 @@
 "2.14": [["UD_Beja-NSC", "UD_Beja-Autogramm"]],
 "2.15": [["UD_Swiss_German-UZH", "UD_Alemannic-UZH"], ["UD_Czech-PDT", "UD_Czech-PDTC"]],
 "2.16": [["UD_Kurmanji-MG", "UD_Northern_Kurdish-Kurmanji"], ["UD_Occitan-CorAG", "UD_Old_Occitan-CorAG"]],
-"2.17": [["UD_Western_Sierra_Puebla_Nahuatl-ITML", "UD_Western_Sierra_Puebla_Nahuatl-MesoTree"]]
+"2.17": [["UD_Western_Sierra_Puebla_Nahuatl-ITML", "UD_Western_Sierra_Puebla_Nahuatl-MesoTree"], ["UD_Egyptian-UJaen", "UD_Egyptian-PC"]]
 }
 }
